--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-next.5",
+    "@angular/animations": "^8.2.5",
     "@angular/cdk": "^8.1.4",
-    "@angular/common": "^9.0.0-next.5",
-    "@angular/compiler": "^9.0.0-next.5",
-    "@angular/core": "^9.0.0-next.5",
+    "@angular/common": "^8.2.5",
+    "@angular/compiler": "^8.2.5",
+    "@angular/core": "^8.2.5",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "^9.0.0-next.5",
+    "@angular/forms": "^8.2.5",
     "@angular/material": "^8.1.4",
-    "@angular/platform-browser": "^9.0.0-next.5",
-    "@angular/platform-browser-dynamic": "^9.0.0-next.5",
-    "@angular/router": "^9.0.0-next.5",
+    "@angular/platform-browser": "^8.2.5",
+    "@angular/platform-browser-dynamic": "^8.2.5",
+    "@angular/router": "^8.2.5",
     "@swimlane/ngx-charts": "^12.0.1",
     "core-js": "^2.6.9",
     "hammerjs": "^2.0.8",
     "ngx-mqtt": "^6.11.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.3",
-    "@angular/cli": "^8.3.3",
-    "@angular/compiler-cli": "^9.0.0-next.5",
-    "@angular/language-service": "^9.0.0-next.5",
+    "@angular-devkit/build-angular": "^0.800.6",
+    "@angular/cli": "^8.0.6",
+    "@angular/compiler-cli": "^8.2.5",
+    "@angular/language-service": "^8.2.5",
     "@types/d3": "^5.7.2",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
@@ -50,6 +50,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.5.3"
+    "typescript": "~3.4.5"
   }
 }
