--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "hammerjs": "^2.0.8",
     "ngx-mqtt": "^6.10.0",
     "rxjs": "^6.5.4",
-    "tslib": "^1.11.1",
-    "zone.js": "~0.10.3"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.7",
@@ -38,8 +38,8 @@
     "@types/d3": "^5.5.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
