--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       run: npm install
     
     - name: Build
-      run: ng build -prod
+      run: npm run build
     
     - name: Publish Artifact
       uses: actions/upload-artifact@v1.0.0
