--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request 
+# Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
@@ -33,13 +33,13 @@ jobs:
         restore-keys: |
             ${{ runner.OS }}-build-
             ${{ runner.OS }}-
-    
+
     - name: Install
       run: npm install
-    
+
     - name: Build
-      run: npm run build
-    
+      run: npm run build-prod
+
     - name: Publish Artifact
       uses: actions/upload-artifact@v1.0.0
       with:
