Deployment to s3 bucket

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,13 @@ jobs:
     - name: Build
       run: npm run build-prod
 
-    - name: Publish Artifact
-      uses: actions/upload-artifact@v1.0.0
-      with:
-        name: dist
-        path: dist/well-sensor-filtering-ui
+
+    - name: Deploy
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        aws s3 cp \
+          --recursive \
+          --region ap-northeast-2 \
+          dist/well-sensor-filtering-ui s3://well-sensor-filtering
