--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,11 +42,13 @@ jobs:
 
 
     - name: Deploy
+      uses: jakejarvis/s3-sync-action@v0.5.1
+      with:
+        args: --acl public-read --follow-symlinks --delete
       env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        aws s3 cp \
-          --recursive \
-          --region ap-northeast-2 \
-          dist/well-sensor-filtering-ui s3://well-sensor-filtering
+        AWS_REGION: 'eu-west-1'   # optional: defaults to us-east-1
+        SOURCE_DIR: 'dist/well-sensor-filtering-ui'      # optional: defaults to entire repository
+
