--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Well-sensor UI CI/CD
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,34 +20,34 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-    - name: Cache
-      uses: actions/cache@v1.1.2
-      with:
-        # A directory to store and save the cache
-        path: node_modules
-        # An explicit key for restoring and saving the cache
-        key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
-        # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
-        restore-keys: |
+      - name: Cache
+        uses: actions/cache@v1.1.2
+        with:
+          # A directory to store and save the cache
+          path: node_modules
+          # An explicit key for restoring and saving the cache
+          key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
+          # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
+          restore-keys: |
             ${{ runner.OS }}-build-
             ${{ runner.OS }}-
 
-    - name: Install
-      run: npm install
+      - name: Install
+        run: npm install
 
-    - name: Build
-      run: npm run build-prod
-      
-    - name: Upload artifact
-      uses: actions/upload-artifact@v1.0.0
-      with:
-        # Artifact name
-        name: well-sensor-filtering-ui
-        # Directory containing files to upload
-        path: 'dist/well-sensor-filtering-ui'
+      - name: Build
+        run: npm run build-prod
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          # Artifact name
+          name: well-sensor-filtering-ui
+          # Directory containing files to upload
+          path: "dist/well-sensor-filtering-ui"
 
   deploy:
     needs: [build]
@@ -57,7 +59,7 @@ jobs:
         with:
           # Artifact name
           name: well-sensor-filtering-ui
-          
+
       - name: Sync to S3
         uses: jakejarvis/s3-sync-action@v0.5.1
         with:
@@ -66,5 +68,6 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'eu-west-1'   # optional: defaults to us-east-1
-  
+          AWS_REGION: "eu-west-1" # optional: defaults to us-east-1
+          SOURCE_DIR: 'well-sensor-filtering-ui'
+
